--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-model": "^4.3.1",
     "react-router-dom": "^6.20.1"
   }
 }
